@@ -6,6 +6,7 @@ CHANGELOG for ACL for Drupal 7
 acl 7.x-1.x-dev:
   Enhancements:
     - #761696: Add tests (work in progress).
+    - Create new hook_acl_explain() to allow the client to explain its grant records.
     - Add acl_has_user($acl_id, $uid) API function.
   Port to D7:
     - #836822: Don't anonymize 'deny' grant records.
